[tool.poetry]
name = "fast-api-main"
version = "0.1.0"
description = ""
authors = ["Andriy <127453425+Andriy22226@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
